--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         }
 
         confirmButton.addEventListener('click', async () => {
-            if (GOOGLE_SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbxMVV8NlvK5B2JW1JrkkubymlR8OKSvg-Y01sbfxDawF6UX8Jabeo5lIgW4Ovxe_zin/exec’) {
+            if (GOOGLE_SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbxMVV8NlvK5B2JW1JrkkubymlR8OKSvg-Y01sbfxDawF6UX8Jabeo5lIgW4Ovxe_zin/exec') {
                 alert('ERRO: A URL do Google Apps Script não foi configurada no arquivo HTML.');
                 return;
             }
